--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@inertiajs/react",
+  "name": "b2_inertiajs_react",
   "version": "1.0.2",
   "license": "MIT",
   "description": "The React adapter for Inertia.js",
@@ -59,7 +59,7 @@
     "react": "^16.9.0 || ^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@inertiajs/core": "1.0.2",
+    "b2_inertiajs_core": "1.0.2",
     "lodash.isequal": "^4.5.0"
   }
 }
