--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "b2_inertiajs_react",
-  "version": "1.0.2",
+  "version": "1.0.2-b",
   "license": "MIT",
   "description": "The React adapter for Inertia.js",
   "contributors": [
